Begin Food State

--- a/MyET/MyET/Food.xaml
+++ b/MyET/MyET/Food.xaml
@@ -75,7 +75,10 @@
                 <StackLayout
                     Orientation="Horizontal"
                     HorizontalOptions="Center">
-                    <Button Text="Feed"></Button>
+                    <Button 
+                        Text="Feed"
+                        Clicked="feedBtnClicked"
+                        x:Name="feedBtn"></Button>
                 </StackLayout>
             </StackLayout>
 
