--- a/MyET/MyET/Food.xaml
+++ b/MyET/MyET/Food.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyET.Food">
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout
+            BackgroundColor="#2B3D4F">
             
             <StackLayout
                 Orientation="Horizontal"
@@ -76,9 +77,7 @@
                     Orientation="Horizontal"
                     HorizontalOptions="Center">
                     <Button 
-                        Text="Feed"
-                        Clicked="feedBtnClicked"
-                        x:Name="feedBtn"></Button>
+                        Text="Feed"></Button>
                 </StackLayout>
             </StackLayout>
 
@@ -95,7 +94,6 @@
                         HorizontalOptions="Center">
                         <Label Text="Red"></Label>
                     </Frame>
-                    
                 </StackLayout>
                 <Frame
                     WidthRequest="200"
