--- a/MyET/MyET/Home.xaml
+++ b/MyET/MyET/Home.xaml
@@ -2,43 +2,43 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyET.Home"
-             BackgroundColor="#1c212f">
+             BackgroundImageSource="bg">
     <ContentPage.Content>
         <StackLayout
             HorizontalOptions="Center"
-            Padding="20">
+            Padding="20"
+            WidthRequest="340">
 
             <StackLayout
                 Orientation="Horizontal"
                 VerticalOptions="Start">
                 <StackLayout
-                    HorizontalOptions="Start">
+                    HorizontalOptions="Start"
+                    VerticalOptions="Center">
                     <ImageButton
                         BackgroundColor="Transparent"
                         Source="back_arrow"
                         Clicked="BackBtnTapped"
-                        WidthRequest="50"
-                        HeightRequest="50"></ImageButton>
+                        WidthRequest="40"
+                        HeightRequest="40"></ImageButton>
                 </StackLayout>
 
                 <StackLayout
+                    VerticalOptions="Center"
                     HorizontalOptions="CenterAndExpand">
-                    <Label 
-                        Text=""
-                        Margin="0,0,0,0"
-                        FontSize="30"
-                        TextColor="White"
-                        HorizontalOptions="CenterAndExpand"
-                        x:Name="alienNameTitle"></Label>
+                    <Label
+                        Text="DASHBOARD"
+                        FontSize="20"
+                        TextColor="#41e47f"></Label>
                 </StackLayout>
 
                 <StackLayout
                     HorizontalOptions="End">
                     <ImageButton 
                         BackgroundColor="Transparent"
-                        Source="menu_green"
-                        WidthRequest="50"
-                        HeightRequest="50"></ImageButton>
+                        Source="help"
+                        WidthRequest="40"
+                        HeightRequest="40"></ImageButton>
                 </StackLayout>
 
             </StackLayout>
@@ -47,52 +47,103 @@
                 VerticalOptions="CenterAndExpand">
                 <StackLayout>
                     <Label
+                        HorizontalOptions="Center"
                         Text="Hunger"
                         FontSize="20"
-                        TextColor="White">
+                        TextColor="#41e47f">
                     </Label>
                     <ProgressBar
                         Progress="0"
+                        ProgressColor="#41e47f"
                         x:Name="hungerBar">
                     </ProgressBar>
                 </StackLayout>
 
                 <StackLayout>
                     <Label
+                        HorizontalOptions="Center"
                         Text="Social"
                         FontSize="20"
-                        TextColor="White">
+                        TextColor="#41e47f">
                     </Label>
                     <ProgressBar
                         Progress="0"
+                        ProgressColor="#41e47f"
                         x:Name="socialBar">
                     </ProgressBar>
                 </StackLayout>
 
                 <StackLayout>
                     <Label
+                        HorizontalOptions="Center"
                         Text="Abductions"
                         FontSize="20"
-                        TextColor="White">
+                        TextColor="#41e47f">
                     </Label>
                     <ProgressBar
                         Progress="0"
+                        ProgressColor="#41e47f"
                         x:Name="abductionBar">
                     </ProgressBar>
                 </StackLayout>
 
             </StackLayout>
+
+            <StackLayout>
+                <Label 
+                    Text="peepee"
+                    Margin="0,0,0,0"
+                    FontSize="30"
+                    TextColor="#41e47f"
+                    HorizontalOptions="CenterAndExpand"
+                    x:Name="alienNameTitle"></Label>
+
+                <Image
+                    x:Name="alienHead"
+                    Source="alien_sad"
+                    WidthRequest="270"
+                    HeightRequest="270">
+                    <Image.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="feedGesture" NumberOfTapsRequired="2"></TapGestureRecognizer>
+                        <SwipeGestureRecognizer Direction="Up" Swiped="socialGesture"></SwipeGestureRecognizer>
+                        <PinchGestureRecognizer PinchUpdated="abductGesture"></PinchGestureRecognizer>
+                    </Image.GestureRecognizers>
+                </Image>
+            </StackLayout>
             
-            <Image 
-                Source="alien_green"
-                WidthRequest="300"
-                HeightRequest="300"></Image>
+            
 
             <StackLayout
                 Orientation="Horizontal"
                 VerticalOptions="End">
 
-                <Button
+                <Image
+                    Source="ufo"
+                    WidthRequest="50"
+                    HeightRequest="50"
+                    HorizontalOptions="Start"
+                    x:Name="saucer">
+                    <Image.GestureRecognizers>
+                        <DragGestureRecognizer CanDrag="True"></DragGestureRecognizer>
+                    </Image.GestureRecognizers>
+                </Image>
+
+                <StackLayout HorizontalOptions="CenterAndExpand"></StackLayout>
+
+                <Image
+                    Source="earth"
+                    WidthRequest="50"
+                    HeightRequest="50"
+                    HorizontalOptions="End"
+                    x:Name="earth">
+                    <Image.GestureRecognizers>
+                        <DropGestureRecognizer 
+                            AllowDrop="True" 
+                            Drop="abductGesture"></DropGestureRecognizer>
+                    </Image.GestureRecognizers>
+                </Image>
+
+                <!--<Button
                     Clicked="feedButton_Clicked"
                     Text="Feed"></Button>
 
@@ -102,7 +153,7 @@
 
                 <Button
                     Clicked="abductButton_Clicked"
-                    Text="Abduct"></Button>
+                    Text="Abduct"></Button>-->
                 
             </StackLayout>
             
