--- a/MyET/MyET/NameAlien.xaml
+++ b/MyET/MyET/NameAlien.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MyET.NameAlien"
-             BackgroundColor="#1c212f">
+             BackgroundImageSource="bg">
     <ContentPage.Content>
         <StackLayout
             VerticalOptions="Center">
