--- a/MyET/MyET/Death.xaml
+++ b/MyET/MyET/Death.xaml
@@ -4,33 +4,35 @@
              x:Class="MyET.Death"
              BackgroundImageSource="bg">
     <ContentPage.Content>
-        <StackLayout>
+        <StackLayout
+            VerticalOptions="Center">
             
             <StackLayout
-                HorizontalOptions="Center"
-                VerticalOptions="Center">
+                HorizontalOptions="Center">
                 <Label Text="Oh no! Your ET has died!"
                        HorizontalOptions="Center"
-                       TextColor="#41e47f"
+                       TextColor="White"
                        FontSize="25"
                        FontAttributes="Bold"/>
                 <Image 
                     Source="rip"
-                    WidthRequest="300"
-                    HeightRequest="300"></Image>
+                    WidthRequest="270"
+                    HeightRequest="270"></Image>
                 <Label Text="Flip the switch below to clone a new one."
                        HorizontalOptions="Center"
-                       TextColor="#41e47f"
+                       TextColor="White"
                        FontSize="20"
                        HorizontalTextAlignment="Center"
                        WidthRequest="250"/>
-                <Switch
+                
+            </StackLayout>
+            <Switch
                     x:Name="reviveSwitch"
                     HorizontalOptions="Center"
                     Toggled="reviveSwitch_Toggled"
                     Scale="2"
-                    ThumbColor="#41e47f"></Switch>
-            </StackLayout>
+                    ThumbColor="#41e47f"
+                    HeightRequest="50"></Switch>
             
             
         </StackLayout>
