--- a/MyET/MyET/MainPage.xaml
+++ b/MyET/MyET/MainPage.xaml
@@ -13,7 +13,7 @@
             HorizontalOptions="Center"
             Margin="0,0,0,90"></Label>
         <Image
-            Source="alien_green"
+            Source="alien_happy"
             WidthRequest="100"
             HeightRequest="100"
             Margin="0,0,0,70"></Image>
