--- a/MyET/MyET/Home.xaml
+++ b/MyET/MyET/Home.xaml
@@ -91,13 +91,26 @@
             </StackLayout>
 
             <StackLayout>
-                <Label 
-                    Text="peepee"
-                    Margin="0,0,0,0"
-                    FontSize="30"
-                    TextColor="#41e47f"
-                    HorizontalOptions="CenterAndExpand"
-                    x:Name="alienNameTitle"></Label>
+                <StackLayout
+                    Orientation="Horizontal">
+                    <StackLayout
+                        HorizontalOptions="Start"></StackLayout>
+                    <Label
+                        HorizontalOptions="CenterAndExpand"
+                        Text="peepee"
+                        Margin="0,0,0,0"
+                        FontSize="30"
+                        TextColor="#41e47f"
+                        x:Name="alienNameTitle"></Label>
+                    <ImageButton
+                        HorizontalOptions="End"
+                        BackgroundColor="Transparent"
+                        Source="edit"
+                        Clicked="editBtnClicked"
+                        WidthRequest="30"
+                        HeightRequest="30"></ImageButton>
+                </StackLayout>
+                
 
                 <Image
                     x:Name="alienHead"
